--- a/css/Home/home.css
+++ b/css/Home/home.css
@@ -43,6 +43,30 @@ header{
     margin-top: 2%;
     position: absolute;
     font-size: 90px;
+    animation: revolve 10s infinite;
+}
+
+@keyframes revolve {
+    0%{
+        transform:rotate(30deg);
+        margin-left:2%
+    }
+    25%{
+        transform:rotate(90deg);
+        margin-left:20%
+    }
+    50%{
+        transform:rotate(180deg);
+        margin-left:40%
+    }
+    75%{
+        transform:rotate(270deg);
+        margin-left:80%
+    }
+    100%{
+        transform:rotate(360deg);
+        margin-left:40%
+    }
 }
 
 .logo > span{
@@ -98,6 +122,11 @@ select{
     display: block;
 }
 
+.quickHeading:hover{
+    font-size:35px;
+    color:palevioletred
+}
+
 .quicksubHeading{
     color:gray;
     font-size: 20px;
@@ -112,6 +141,24 @@ select{
     /* border: 2px solid rgb(148, 86, 184); */
     float: left;
     box-shadow: 10px 20px 10px black;
+    animation: dance 5s infinite;
+}
+
+@keyframes dance{
+    0% {transform:rotate(-5deg)}
+    25% {transform:rotate(0deg)}
+    40% {transform:scale(1.1)}
+    50% {transform:rotate(5deg)}
+    75% {transform:rotate(0deg)}
+    100% {transform:rotate(-5deg)}
+}
+
+.tileContainer:hover{
+    transform: scale(1.1);
+    /* transform: rotate(-20deg); */
+    /* transform: skewY(20deg) */
+    /* transform: translate(100px, 100px) */
+
 }
 
 .tileComponent1{
@@ -160,4 +207,68 @@ ul{
 }
 .noborder{
     border:none
+}
+
+@media screen and (max-width:1600px){
+    body{
+        background-color:#f5b8d9
+    }
+}
+
+@media screen and (max-width:1400px){
+    body{
+        background-color:#d2baef
+    }
+}
+
+@media screen and (max-width:1220px){
+    body{
+        background-color:#bac7ef
+    }
+    .dropdown{
+        margin-top: 31%;
+    }
+}
+
+@media screen and (max-width:1000px){
+    body{
+        background-color:#baefe3
+    }
+    .tileContainer{
+        width:45%
+    }
+}
+
+@media screen and (max-width:800px){
+    body{
+        background-color:#efcdba
+    }
+    .tileContainer{
+        width:80%
+    }
+    .dropdown{
+        margin-top: 40%;
+        width: 89%;
+        margin-left: 6%;
+    }
+}
+
+@media screen and (max-width:500px){
+    body{
+        background-color:#efe8ba
+    }
+    .tileContainer{
+        width:100%
+    }
+    .dropdown{
+        margin-top: 60%;
+        width: 100%;
+        margin-left: 2%;
+    }
+    select {
+        width:90%
+    }
+    #restSelect {
+        width: 90%;
+    }
 }
