--- a/css/Home/home.css
+++ b/css/Home/home.css
@@ -272,3 +272,14 @@ ul{
         width: 90%;
     }
 }
+
+#coupons{
+    height:400px;
+    width:400px;
+    background-color:purple;
+    margin-left:36%;
+    margin-top:1%;
+    display: none;
+    position: absolute;
+    z-index: 100;
+}
